tests/machine/x/swift/cross_join.error
/tmp/TestSwiftCompiler_VMValid_Goldencross_join2887399637/001/main.swift:26:16: error: cannot convert value of type '[String : Any]' to expected argument type '(orderCustomerId: Int, orderId: Int, orderTotal: Int, pairedCustomerName: String)'
24 | 	for o in orders {
25 | 		for c in customers {
26 | 			_res.append(["orderId": o.id, "orderCustomerId": o.customerId, "pairedCustomerName": c.name, "orderTotal": o.total])
   |                `- error: cannot convert value of type '[String : Any]' to expected argument type '(orderCustomerId: Int, orderId: Int, orderTotal: Int, pairedCustomerName: String)'
27 | 		}
28 | 	}
