tests/machine/x/swift/cross_join.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:40:30Z
struct Customer: Equatable {
    var id: Int
    var name: String
}

struct Order: Equatable {
    var customerId: Int
    var id: Int
    var total: Int
}

struct Result: Equatable {
    var orderCustomerId: Int
    var orderId: Int
    var orderTotal: Int
    var pairedCustomerName: String
}

var customers = [Customer(id: 1, name: "Alice"), Customer(id: 2, name: "Bob"), Customer(id: 3, name: "Charlie")]
var orders = [Order(customerId: 1, id: 100, total: 250), Order(customerId: 2, id: 101, total: 125), Order(customerId: 1, id: 102, total: 300)]
var result = ({
	var _res: [(orderCustomerId: Int, orderId: Int, orderTotal: Int, pairedCustomerName: String)] = []
	for o in orders {
		for c in customers {
			_res.append(["orderId": o.id, "orderCustomerId": o.customerId, "pairedCustomerName": c.name, "orderTotal": o.total])
		}
	}
	return _res
}())
print("--- Cross Join: All order-customer pairs ---")
for entry in result {
    print("Order", entry.orderId, "(customerId:", entry.orderCustomerId, ", total: $", entry.orderTotal, ") paired with", entry.pairedCustomerName)
}
